Added a couple of screenshots

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ publish/
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 #packages/
 node_modules
+.idea/workspace.xml
 
 # Windows Azure Build Output
 csx
